build: a container whose substrate lives on a volume, and no key in the image
Two-stage Dockerfile on clojure:temurin-26-tools-deps (JDK 26.0.1) and
eclipse-temurin:26-jre; 445 MB final, of which 80 MB is the jar.

The dependency-warming layer needs both `-P -M:serve` and `-P -T:build uber`.
`-P` with `-T` resolves only the tool's own deps, because build.clj builds the
project basis at runtime with b/create-basis and `-P` never runs it: measured,
`-P -T:build` alone leaves ~/.m2 at 15 MB with no datalevin.

.dockerignore is a security boundary — .deepseek-key and .tavily-key are real
gitignored secrets in the repo root. Verified against the exported container
filesystem and the decompressed jar (37468 entries), with positive controls to
show the search bites: 0 hits for either key value.

Verified: 35 events, one model-free /api/connect, 36 events, `docker restart`,
36 events, and the merged notebook still there.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>